app name change and delete of github action from package file

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Mp3 Tagger</title>
+    <title>mp3-tagger</title>
   </head>
   <body>
     <div id="root"></div>
