--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -7,12 +7,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script>
-    window.electron.ipcRenderer.once('ipc-example', (arg) => {
-      // eslint-disable-next-line no-console
-      console.log(arg);
-    });
-
-    window.electron.ipcRenderer.myPing();
-  </script>
+  <script></script>
 </html>
